<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.UserDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:style/TextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="103dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.026"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.125"
                    tools:src="@tools:sample/avatars" />




                <TextView
                    android:id="@+id/tv_repository_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/tv_repository_text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.362" />

                <TextView
                    android:id="@+id/tv_following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tv_following_text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_follower_text"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_follower_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tv_follower_text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_repository_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.362" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/tv_repository"
                    app:layout_constraintBottom_toTopOf="@+id/tv_repository_text"
                    app:layout_constraintEnd_toEndOf="@+id/tv_repository_text"
                    app:layout_constraintStart_toStartOf="@+id/tv_repository_text" />

                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/tv_follower"
                    app:layout_constraintBottom_toTopOf="@+id/tv_follower_text"
                    app:layout_constraintEnd_toEndOf="@+id/tv_follower_text"
                    app:layout_constraintStart_toStartOf="@+id/tv_follower_text" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/tv_following"
                    app:layout_constraintBottom_toTopOf="@+id/tv_following_text"
                    app:layout_constraintEnd_toEndOf="@+id/tv_following_text"
                    app:layout_constraintStart_toStartOf="@+id/tv_following_text" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_username"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@+id/img_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_name"
                    android:textColor="#747171"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_company"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/baseline_home_work_24"
                    app:layout_constraintStart_toStartOf="@+id/tv_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_location"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/baseline_place_24"
                    app:layout_anchorGravity="center"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FD4D40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/white"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/appBarLayout"
        tools:visibility="gone"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>